# session-score-plugin

./: CLAUDE.md  Cargo.toml  Makefile  README.md
hooks/: pre-commit  pre-push
src/: animation.rs  heuristic.rs  main.rs  score.rs  session.rs  tui.rs
